map rendering from google maps api

--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Where-To</title>
-<!--     <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
   </head>
   <body>
     <h1>Where To?</h1>
     <div ui-view></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJl35YcxZaHH0N8HMgtw7wbrahTpG5mOg"></script>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
@@ -22,5 +23,8 @@
     // <script src="app/views/links.js"></script> -->
 
   <script src="app/app.js"></script>
+  <script src="app/services/services.js"></script>
+  <script src="app/controllers/mapController.js"></script>
+
   </body>
 </html>
