added nav bar and styling to buttons

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Where-To</title>
+
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>Where To?</h1>
+    
+    
     <div ui-view></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJl35YcxZaHH0N8HMgtw7wbrahTpG5mOg"></script>
 
