--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
     <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
   </head>
   <body>
     
@@ -16,12 +17,8 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-
-    <!-- Firebase -->
-<!--     // <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script> -->
-
-    <!-- AngularFire -->
-<!--     // <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script> -->
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
 
 <!--     // <script src="app/controllers/auth.js"></script>
     // <script src="app/views/links.js"></script> -->
