more login and signup styling

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
   <script src="app/app.js"></script>
   <script src="app/services/services.js"></script>
   <script src="app/controllers/mapController.js"></script>
+  <script src="app/controllers/authController.js"></script>
 
   </body>
 </html>
