--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
     <script src="lib/firebase/firebase.js"></script>
+    <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
 
 <!--     // <script src="app/controllers/auth.js"></script>
     // <script src="app/views/links.js"></script> -->
