--- a/client/index.html
+++ b/client/index.html
@@ -6,21 +6,22 @@
 
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
-    <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
-    <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <link href="https://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
   </head>
   <body>
     
     
     <div ui-view></div>
+    <!-- Google Map API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBBNf4qxjRZMaR11lRp3M-8EoOcnv0lzI"></script>
-
+    <!-- Angular and Firebase Dependencies -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/angularfire/dist/angularfire.js"></script>
     <script src="lib/firebase/firebase.js"></script>
     <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
-
+  
   <script src="app/app.js"></script>
   <script src="app/services/services.js"></script>
   <script src="app/controllers/mapController.js"></script>
